[package]
name = "bullet-exchange-interface"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Type definitions and message formats for the Bullet exchange protocol."
homepage = "https://www.bullet.xyz"
repository = "https://github.com/bulletxyz/bullet-exchange-interface"
readme = "README.md"
keywords = ["bullet", "trading", "exchange"]
categories = ["api-bindings", "encoding"]
publish = false # flip to true once bullet-bs58 is published to crates.io

[dependencies]
borsh = "1.5"
serde = "1"
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2"
rust_decimal = { version = "1.41", features = ["maths", "borsh"] }
schemars = { version = "0.8", features = ["rust_decimal"] }
hex = { version = "0.4", features = ["serde"] }

sov-universal-wallet = { version="0.3", features=["serde", "macros"], optional = true }
bullet-bs58 = { git = "https://github.com/bulletxyz/bullet-bs58.git" }

[features]
default = []
schema = [ "dep:sov-universal-wallet" ]

[[example]]
name = "trim"
required-features = ["schema"]

[lints.rust]
dead_code = "deny"
non_ascii_idents = "deny" # Bad for readability and it can also be a security vulnerability

[lints.clippy]
debug_assert_with_mut_call = "deny"
inefficient_to_string = "deny"
map_flatten = "deny"
manual_ok_or = "deny"
doc_link_with_quotes = "deny"
match_same_arms = "deny"
semicolon_if_nothing_returned = "deny"

# Performance-critical lints
or_fun_call = "warn"
unnecessary_lazy_evaluations = "warn"
redundant_clone = "warn"
trivial_regex = "warn"
needless_collect = "warn"
arithmetic_side_effects = "warn"
